# dirorch

./: README.md  design.md  main.py  pyproject.toml
dirorch/: __init__.py  app.py  cli.py  config_loader.py  constants.py  entities.py  env.py  errors.py  hooks.py  models.py  state.py  template_engine.py  workflow.py
tests/: test_main.py
