[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dirorch"
version = "0.1.0"
description = "Directory-based workflow orchestration engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
dirorch = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[tool.setuptools]
py-modules = ["main"]
